add image in table
