# app/Http/Controllers/AuthController.php
@@ -84,7 +84,7 @@ class AuthController extends Controller
         }
 
         if (! $token = auth()->attempt($validator->validated())) {
-            return response()->json(['error' => 'Unauthorized'], 401);
+            return response()->json(['error' => 'Дані  введено не коректно'], 401);
         }
 
         return $this->createNewToken($token);
@@ -92,94 +92,81 @@ class AuthController extends Controller
 
     /**
      * @OA\Post(
-     ** path="/api/auth/register",
-     *   tags={"Auth"},
-     *   summary="Register",
-     *   operationId="register",
+     *     path="/api/auth/register",
+     *     summary="Register",
+     *     tags={"Auth"},
+     *     operationId="Register",
+     *      @OA\RequestBody(
+     *         @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *             @OA\Schema(
+     *                 @OA\Property(
+     *                     property="name",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="email",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="password",
+     *                     type="string"
+     *                 ),
+     *                 @OA\Property(
+     *                     property="password_confirmation",
+     *                     type="string"
+     *                 ),
+     *                  @OA\Property(
+     *                     property="Image",
+     *                     type="file"
+     *                 ),
+     *             )
+     *         )
+     *     ),
      *
-     *  @OA\Parameter(
-     *      name="name",
-     *      in="query",
-     *      required=true,
-     *      @OA\Schema(
-     *           type="string"
-     *      )
-     *   ),
-     *  @OA\Parameter(
-     *      name="email",
-     *      in="query",
-     *      required=true,
-     *      @OA\Schema(
-     *           type="string"
-     *      )
-     *   ),
-     *   @OA\Parameter(
-     *      name="password",
-     *      in="query",
-     *      required=true,
-     *      @OA\Schema(
-     *           type="string"
-     *      )
-     *   ),
-     *      @OA\Parameter(
-     *      name="password_confirmation",
-     *      in="query",
-     *      required=true,
-     *      @OA\Schema(
-     *           type="string"
-     *      )
-     *   ),
-     *   @OA\Response(
-     *      response=201,
-     *       description="Success",
-     *      @OA\MediaType(
-     *           mediaType="application/json",
-     *      )
-     *   ),
-     *   @OA\Response(
-     *      response=401,
-     *       description="Unauthenticated"
-     *   ),
-     *   @OA\Response(
-     *      response=400,
-     *      description="Bad Request Закушуємо нормально"
-     *   ),
-     *   @OA\Response(
-     *      response=404,
-     *      description="not found"
-     *   ),
-     *      @OA\Response(
-     *          response=403,
-     *          description="Forbidden"
-     *      )
-     *)
-     **/
-
-    /**
-     * Register a User.
-     *
-     * @return \Illuminate\Http\JsonResponse
+     *     @OA\Response(
+     *     response="200",
+     *     description="Success"
+     * )
+     * )
      */
-    public function register(Request $request) {
+
+    public function register(Request $request)
+    {
         $validator = Validator::make($request->all(), [
-            'name' => 'required|string|between:2,100',
-            'email' => 'required|string|email|max:100|unique:users',
-            'password' => 'required|string|confirmed|min:6',
+            'email'=>'required|email|unique:users|between:2,100',
+            'name'=>'required|string|max:100',
+            'password' =>'required|string|min:6|confirmed',
         ]);
-
-        if($validator->fails()){
-            return response()->json($validator->errors()->toJson(), 400);
+        if($validator->fails())
+        {
+            return response()->json($validator->errors, 422);
         }
+        $filename = "";
+        if(!empty($_FILES))
+        {
+            $extension = pathinfo($_FILES['Image']['name'], PATHINFO_EXTENSION);
+            $filename = uniqid() . ".{$extension}";
 
+            $dir = $_SERVER['DOCUMENT_ROOT'] . '/images/' . $filename;
+            move_uploaded_file($_FILES['Image']['tmp_name'], $dir);
+        }
         $user = User::create(array_merge(
             $validator->validated(),
-            ['password' => bcrypt($request->password)]
+            ['password' => bcrypt($request->password),
+                'Image' => $filename]
         ));
 
+        if(!$token = auth()->attempt($validator->validated()))
+        {
+            return response()->json(['error' => 'Дані введено не коректно!'], 401);
+        }
+
         return response()->json([
-            'message' => 'User successfully registered',
-            'user' => $user
-        ], 201);
+            'message'=> 'Успішно зареєстровано!',
+            'user' => $user,
+            'access_token' => $token
+        ], 200);
     }
 
     /**
